Update UserController, UserModel, UserRepository, and UserService. Added the Add Friend Feature and Tested.